@@ -264,3 +264,4 @@ T_415create_webm:c1447a8f67f47a0b2d8c21d4208a8f98-5e1abfc5e13a44989a6ff31e51e9ea
 T_416dts_in_mp4:77e4a560d93a9c1a1030318c07ee48e5-60d52627905d83b1e605119152d7bf4e:passed:20131218-231435:1.398112245
 T_417mkvextract_tracks_at_end_of_file:b3bb67d316e20da12926d5c1d628f6e5:passed:20131229-122704:0.04690235
 T_418ac3_frame_size_0:24f130019cb8781abe644d742c81487a:passed:20131230-233047:4.297033387
+T_419mov_pcm_sample_size_1_sample_table_empty:e8eed0fe262c9acdf877c011cb96e788:passed:20140101-221519:0.052961521
